--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
+    <head>
+<style>
+
+</style>
+    </head>
     <body>
-        test
+        <div class="header">
+
+        </div>
     </body>
 </html>
